Update : redis authentication and remove unused methods